# Langchain-Docs

./: pyproject.toml  requirements.txt
agent/: Build-Agent.ipynb  build-agent.py
chatbot/: Build-Chatbot.ipynb  build-chatbot.py
simple-llm-app/: Simple-LLM-Application.ipynb  simple_llm_app.py
