[project]
name = "langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-ollama>=0.3.2",
    "langgraph-checkpoint-sqlite>=2.0.7",
    "langgraph>=0.4.3",
    "tavily-python>=0.7.2",
    "transformers>=4.51.3",
]
